--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
     color: #444;
     text-align: center;
     line-height: 1.5;
+    margin: 0;
 }
 
 nav,
@@ -37,6 +38,8 @@ section {
     background-color: #bbb;
 }
 
+
+
 section:nth-child(even) {
     background-color: #ddd;
 }
@@ -54,8 +57,13 @@ form > div {
     text-align: left;
 }
 
+fieldset {
+    margin: 10px 0;
+}
+
 .login-sect, 
-.signup-sect {
+.signup-sect,
+.add-exchange-sect {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -68,9 +76,15 @@ li {
 
 button {
     margin: 16px 0;
+    font-size: 20px;
 }
 
 i {
     font-size: 12px;
+}
+
+.add-song-field {
+    border-bottom: 1px black solid;
+    width: 90%;
 }
   
